--- a/front/src/index.css
+++ b/front/src/index.css
@@ -2,3 +2,4 @@
 @plugin "daisyui";
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
+@custom-variant dark (&:where(.dark, .dark *));
