--- a/front/src/index.css
+++ b/front/src/index.css
@@ -3,3 +3,21 @@
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
 @custom-variant dark (&:where(.dark, .dark *));
+
+/* Make default arrows always visible */
+.slick-prev,
+.slick-next {
+  z-index: 50;
+  display: block !important;
+  width: 20px;
+  height: 20px;
+  background-color: rgba(0, 0, 0, 0.4); /* semi-transparent black */
+  color: white;
+  border-radius: 9999px;
+}
+
+/* Optional: Add hover effect */
+.slick-prev:hover,
+.slick-next:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+}
